<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <ImageView
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_section_item_shape"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/section_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/section_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_heavy"
        android:text="@string/device_info"
        android:textColor="@color/dark_text_color"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/section_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/section_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/info_about_phone"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/section_icon" />

    <TextView
        android:id="@+id/alert_text"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/alert_circle"
        android:fontFamily="@font/lato_semibold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/arrow_button"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/arrow_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/transparent"
        android:foregroundGravity="center"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go_to_app_section" />

</androidx.constraintlayout.widget.ConstraintLayout>