<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.activities.MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/scan_circle"
        app:layout_constraintTop_toTopOf="@id/scan_circle"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/dashboard_animation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scan_circle"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:layout_marginTop="74dp"
        android:background="@drawable/round_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:foregroundGravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_heavy"
            android:text="@string/scan"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_semibold"
            android:text="12 problems"
            android:drawablePadding="4dp"
            android:textColor="@color/problem_red"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            app:drawableStartCompat="@drawable/problems_alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scan" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scan_card"
        android:layout_width="167dp"
        android:layout_height="213dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        android:background="@drawable/rounded_rectangle_shape"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:cardCornerRadius="19dp"
        app:layout_constraintEnd_toStartOf="@+id/viruses_card"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_circle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phone_circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/icon_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="20dp"
                android:src="@drawable/phone_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAccessibility="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/device_scan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato_heavy"
            android:text="@string/device_scan"
            android:textColor="@color/dark_text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_circle" />

        <TextView
            android:id="@+id/scan_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/info_about_phone"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_scan_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/lato_bold"
            android:text="@string/scan"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scan_info_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viruses_card"
        android:layout_width="167dp"
        android:layout_height="213dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_rectangle_shape"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        app:cardCornerRadius="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scan_card"
        app:layout_constraintTop_toTopOf="@id/scan_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/virus_circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/icon_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/virus_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAccessibility="no" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/virus_check_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato_heavy"
            android:text="@string/check_for_viruses"
            android:textColor="@color/dark_text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/virus_circle" />

        <TextView
            android:id="@+id/virus_check_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/info_about_phone"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/virus_check_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/lato_bold"
            android:text="@string/check"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/virus_check_info_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="30dp"
        android:translationZ="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_shape"
            android:elevation="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:layout_width="53dp"
                android:layout_height="6dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@color/bottom_sheet_decoration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_heavy"
                android:text="@string/dashboard"
                android:textColor="@color/dark_text_color"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/section_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingBottom="20dp" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>